--- a/styles/style.css
+++ b/styles/style.css
@@ -51,6 +51,7 @@ body, html{
     padding-left: 104px;
     padding-top: 3px;
     padding-bottom: 3px;
+    box-shadow: 2px 4px 6px rgba(79, 79, 79, 0.15);
 }
 
 .wrapper .links .links-block a img{
