--- a/styles/style.css
+++ b/styles/style.css
@@ -58,3 +58,45 @@ body, html{
     margin-right: 15px;
     max-width: 30px;
 }
+
+.sign-up{
+    padding: 240px 200px;
+}
+
+.sign-up h2{
+    font-size: 45px;
+    text-align: center;
+}
+
+.sign-up h3{
+    font-size: 25px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.sign-up .input{
+    margin-bottom: 30px;
+}
+
+.sign-up .input input{
+    width: 100%;
+    height: 30px;
+    font-size: 18px;
+}
+
+.sign-up input[type="submit"]{
+    width: 100%;
+    background-color:#03A9F4;
+    color: #fff;
+    border-radius: 15px;
+    font-size: 15px;
+    padding: 8px 0;
+    margin-top: 20px;
+    border: 1px solid #ccc;
+    transition: .3s;
+    cursor: pointer;
+}
+
+.sign-up input[type="submit"]:hover{
+    box-shadow: 2px 4px 6px rgba(79, 79, 79, 0.15);
+}
